package model.Tablero.Puerto;

import model.Jugador.Jugador;

public class SinPuerto extends Puerto{


    @Override
    public void darReglaAJugador(Jugador jugador) {

    }
}
